# movie-ticket-booking-system-10th-grade-DIPirig22

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  movie-ticket-booking-system-10th-grade-DIPirig22.sln  movie-ticket-booking-system-10th-grade-DIPirig22.vcxproj  movie-ticket-booking-system-10th-grade-DIPirig22.vcxproj.filters
loginPage/: menu.cpp
movie-ticket-booking-system-10th-grade-DIPirig22/: main.cpp  sol.sln
movie-ticket-booking-system-10th-grade-DIPirig22/adminpanel/: admin.cpp  admin.h  adminpanel.vcxproj  adminpanel.vcxproj.filters  movies.json
movie-ticket-booking-system-10th-grade-DIPirig22/auth/: auth.cpp  auth.h  auth.vcxproj  auth.vcxproj.filters
movie-ticket-booking-system-10th-grade-DIPirig22/booking/: booking.vcxproj  booking.vcxproj.filters  bookings.json
movie-ticket-booking-system-10th-grade-DIPirig22/json/: json.vcxproj  json.vcxproj.filters
movie-ticket-booking-system-10th-grade-DIPirig22/menu/: menu.cpp  menu.h  menu.vcxproj  menu.vcxproj.filters  seat.cpp  seat.h
movie-ticket-booking-system-10th-grade-DIPirig22/movie-ticket-booking-system-10th-grade-DIPirig22/: bookings.json  movie-ticket-booking-system-10th-grade-DIPirig22.vcxproj  movie-ticket-booking-system-10th-grade-DIPirig22.vcxproj.filters  movies.json  users.json
scr/: main.cpp
